Refactored to close First part of work on http endpoint. This version shows built in welcome page with upload processor.

--- a/content/public/welcome.html
+++ b/content/public/welcome.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
     <body>
-        <h1 style="color:green">Hello World!</h1>
+        <h1 style="color:green">Sample Welcome Page</h1>
+        <img src="jobsdone.png" alt="Job Is Done" />
         <h2>application/x-www-form-urlencoded</h2>
         <form method="post" enctype="application/x-www-form-urlencoded">
             <input type="text" name="textfield" value="textValue" />
